syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.guedim.model";

message BalanceCheckRequest {
  int32 account_number = 1;
}

// USD
message Balance {
  int32 amount = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 value = 1;
}

message DepositRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message WithdrawalError {
  ErrorMessage error_message = 1;
  int32 balance = 2;
}

enum ErrorMessage {
  ONLY_TEN_MULTIPLES = 0;
  INSUFICIENT_FUNDS = 1;
}

service BankService {

  // Unary
  rpc getBalance (BalanceCheckRequest) returns  (Balance);

  // server-side streaming
  rpc withdraw (WithdrawRequest) returns (stream Money);

  // Client-side streaming
  rpc cashDeposit (stream DepositRequest) returns (Balance);

}